[package]
name = "traffic_forward"
version = "0.1.4"
edition = "2021"
authors = ["bigbug-gg <bigbug-gg@qq.com>"]
description = "Support for Linux traffic forwarding settings via both the console and a web API."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bigbug-gg/traffic_forward"
repository = "https://github.com/bigbug-gg/traffic_forward"
keywords = ["forward", "iptables"]
categories = ["Command-line interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
nix = "0.28.0"
rexpect = "0.5.0"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
