[package]
name = "traffic_forward"
version = "0.1.9"
edition = "2021"
authors = ["bigbug-gg <bigbug-gg@qq.com>"]
description = "This is a tool that allows you to easily create traffic forwarding rules through this command, which is implemented through the iptables tool."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bigbug-gg/traffic_forward"
repository = "https://github.com/bigbug-gg/traffic_forward"
keywords = ["forward", "iptables"]
categories = ["Command-line"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
nix = "^0.28"
rexpect = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
rusqlite = { version = "0.32.0", features = ["bundled"] }
